# mailfolio

./: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
mailfolio/: config.py  email_template.py  mailer.py  main.py
tests/: conftest.py  test_main.py
tests/integration/: conftest.py  test_health.py  test_submit.py
tests/unit/: test_config.py  test_email_template.py  test_hcaptcha.py  test_origin.py
