[project]
name = "mailfolio"
version = "0.1.0"
description = "Contact-form email relay: validates origin, sends via Gmail SMTP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.22.0",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
